# FictionWritingAssistant

./: LICENSE  README.md
engine/: CMakeLists.txt
engine/inc/: Engine.h  Issue.h  Work.h
engine/src/: Engine.cpp  EngineUnitTest.cpp
ui/test/: main  main.cpp
